ipc/ipdl/test/ipdl/ok/jetpackContent.ipdl
include protocol content;
include protocol jetpack;

intr protocol jetpackContent {
    bridges jetpack, content;

child:
    async __delete__();

};
