ipc/ipdl/test/ipdl/error/bridgesNonexistent.ipdl
protocol bridgesNonexistent {
    bridges Leftie, Rightie;

child: __delete__();
state DEAD: send __delete__;
};
